--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.10.2",
+    "@reach/slider": "^0.10.4",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "map": "^1.0.1",
     "react": "^16.13.1",
+    "react-bootstrap-range-slider": "^1.0.0",
     "react-dom": "^16.13.1",
+    "react-input-range": "^1.3.0",
     "react-native": "^0.62.2",
     "react-native-elements": "^2.0.2",
     "react-native-hr": "^1.1.4",
